# dicomsdl

./: CMakeLists.txt  ProjectHome.md  clean_everything.bat  clean_everything.sh  config_cmake.bat  config_cmake.sh  copyright.txt  readme.txt
src/: CMakeLists.txt
src/doc/: 00mainpage.doc  01intro.doc  02installing.doc  03coderecipes.doc  04quickstart.doc  05license.doc  06todo.doc  acknowledge.txt  api.txt  coderecipes.txt  conv_to_sphinx.py  index.txt  installing.txt  intro.txt  ipp.txt  license.txt  make.bat  makedoxyfile.py  quickstart.txt  runme.bat  todo.txt
src/doc/sphinx.src/: api.rst  coderecipes.rst  conf.py  index.rst  installing.rst  my.style  quickstart.rst
src/doc/sphinx.src/_static/: Copy of default.css  basic.css  default.css
src/example/: CMakeLists.txt  changetsuid.cxx  dicomfiledump.cxx  dicomfiledump.py  dumpdicomdir.py  example.py  example_getvalue.cxx  example_getvalue.py  example_setvalue.cxx  getting_started.cxx  img001.dcm  makedicomdir.cxx  makedicomdir.py  modifyelement.py  test.cxx  test.py
src/ext/expat/: CMakeLists.txt  README.txt  expat_config.h  expat_config.h.cmakein
src/ext/ijg/: CMakeLists.txt  README.txt  go.bat  ijg_codec.cxx  ijg_codec.h  ijg_codec12.cxx  ijg_codec16.cxx  ijg_codec8.cxx
src/ext/ipp/: CMakeLists.txt  ipp_codec.cxx  ipp_codec.h
src/ext/minizip/: CMakeLists.txt
src/ext/opj/: CMakeLists.txt  README.txt  openjpeg.h  openjpeg12.h  openjpeg_mangled.h  openjpeg_mangled12.h  opj_codec.cxx  opj_codec.h
src/ext/zlib/: CMakeLists.txt  zconf.h
src/lib/: CMakeLists.txt  cmdoptutil.cxx  dataelement.cxx  dataset.cxx  deflate.cxx  deflate.h  dicom.h  dicomcfg.h  dicomcfg.h.in  dicomdict.cxx  dicomdict.inc.cxx  dicomdir.cxx  dicomdir.h  dicomfile.cxx  dicomfile_sorter.cxx  dicomxml.cxx  dicomzip.cxx  errormsg.cxx  errormsg.h  fileutil.cxx  imagecodec.cxx  imagecodec.h  instream.cxx  instream.h  instreamobj.cxx  instreamobj.h  memutil.cxx  memutil.h  outstream.cxx  outstream.h  pixelsequence.cxx  pixelsequence.h  recordoffset.cxx  recordoffset.h  sequence.cxx  sequence.h  stringutil.cxx  uidutil.cxx  utilfunc.h  zipfile.cxx
src/lib/dictionary/: HOWTOBUILD.txt  dicomdict.hxx  dicomdict.inc.cxx  dict.xlsx  elements.csv  process_dict.py  test.cxx  uid.csv
src/wrapper/: CMakeLists.txt
src/wrapper/python/: CMakeLists.txt  dicom.i.in  dummy.c  setup.py
