SET(BUILD_SHARED_LIBS ON)

IF(_HAVE_BASETSD_H)
	SET(INCLUDE_TYPEMAP	"windows.i")
ENDIF(_HAVE_BASETSD_H)	

IF(_HAVE_STDINT_H)
	SET(INCLUDE_TYPEMAP	"stdint.i")
ENDIF(_HAVE_STDINT_H)

configure_file (
  "dicom.i.in"
  "dicom.i"
)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})
FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(dicom.i PROPERTIES CPLUSPLUS ON)
SWIG_ADD_MODULE(dicom python dicom.i)
SWIG_LINK_LIBRARIES(dicom ${PYTHON_LIBRARIES} dicomsdk)

IF (WIN32)
SET (PYEXT_FILES dicom.py _dicom.pyd)
ELSE (WIN32)
SET (PYEXT_FILES dicom.py _dicom.so)
ENDIF (WIN32)

INSTALL (FILES ${PYEXT_FILES} DESTINATION bin)